# localvoice

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.automaker/: active-branches.json  categories.json  execution-state.json  notifications.json
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.storybook/: main.ts  preview.ts
docs/: changelog.md
plan/: epics.md  flowdict_prd.md  smoke_test.md
scripts/: bootstrap.ps1  (+8 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/nemo_worker/: localvoice_nemo_worker.py  manifest.json
src-tauri/sidecars/parakeet-stream-worker/: CMakeLists.txt  main.cpp
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs  cleanup.rs  devices.rs  level_meter.rs  mod.rs  wav_writer.rs
src-tauri/src/benchmark/: orchestrator.rs
src-tauri/src/commands/: benchmark.rs  dictionary.rs  filler_words.rs  history.rs  logs.rs  mod.rs  models.rs  recording.rs  settings.rs  stats.rs  system.rs  transcription.rs  updater.rs  window.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/db/repositories/: ambiguous_terms_repo.rs  dictionary_repo.rs  filler_words_repo.rs  mod.rs  models_repo.rs  sessions_repo.rs  settings_repo.rs
src-tauri/src/dictionary/: mod.rs  rules.rs  service.rs  suggestions.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/history/: export.rs  mod.rs  reprocess.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/models/: downloader.rs  mod.rs  registry.rs  service.rs  verify.rs
src-tauri/src/os/: autostart.rs  clipboard.rs  foreground_window.rs  hotkeys.rs  mod.rs  modifier_shortcuts.rs  text_insertion.rs  tray.rs
src-tauri/src/postprocess/: ambiguity.rs  fillers.rs  mod.rs  normalize.rs
src-tauri/src/state/: app_state.rs  mod.rs  recording_state.rs
src-tauri/src/stats/: aggregations.rs  mod.rs  service.rs
src-tauri/src/transcription/: engine.rs  language.rs  mod.rs  nemo_worker.rs  orchestrator.rs  parakeet_parser.rs  parakeet_runtime.rs  parakeet_sidecar.rs  parakeet_stream_worker.rs  parser.rs  pipeline.rs  streaming.rs  types.rs  whisper_sidecar.rs
(+403 files in other folders)
