[package]
name = "localvoice"
version = "0.1.0"
description = "LocalVoice — offline-first desktop voice dictation"
authors = []
edition = "2021"

[lib]
name = "localvoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
cpal = "0.15"
hound = "3.5"
arboard = "3"
enigo = "0.1"
