[package]
name = "localvoice"
version = "0.2.0"
description = "LocalVoice — offline-first desktop voice dictation"
authors = []
edition = "2021"

[lib]
name = "localvoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4", features = ["std"] }
cpal = "0.15"
hound = "3.5"
arboard = "3"
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
rfd = "0.15"
reqwest = { version = "0.12", features = ["stream", "json"] }
sha2 = "0.10"
futures-util = "0.3"
tauri-plugin-notification = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
